{
  "version": 4,
  "terraform_version": "1.2.4",
  "serial": 222,
  "lineage": "0ef40c64-3aba-d464-f6f2-faf728be61cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "webapp-ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:loadbalancer/webapp-lb-tf",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-lb-tf-2070837974.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "webapp-lb-tf",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "webapp-lb-tf",
            "security_groups": [
              "sg-0920f702f62d3e7b3"
            ],
            "source_security_group": "170689096462/allow_port_80_LB",
            "source_security_group_id": "sg-0920f702f62d3e7b3",
            "subnets": [
              "subnet-018acb9ec54bc1605",
              "subnet-08f51aa1e1c381dcd"
            ],
            "tags": {
              "Environment": "production",
              "Name": "Webapp"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "Webapp"
            },
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.allow_port80_LB",
            "aws_subnet.subnet-1a",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064dae9d6b26cb0b8",
            "arn": "arn:aws:ec2:ap-south-1:170689096462:instance/i-0e327196a48669d28",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e327196a48669d28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-061823592a401e7b0",
            "private_dns": "ip-10-10-1-185.ap-south-1.compute.internal",
            "private_ip": "10.10.1.185",
            "public_ip": "13.126.124.238",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06b7d3acdf661598b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08f51aa1e1c381dcd",
            "tags": {
              "Name": "webapp-1a"
            },
            "tags_all": {
              "Name": "webapp-1a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df8b437d85f34267"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064dae9d6b26cb0b8",
            "arn": "arn:aws:ec2:ap-south-1:170689096462:instance/i-0c6c5d8402cc3d1d7",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c6c5d8402cc3d1d7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0effed7e11abf997f",
            "private_dns": "ip-10-10-2-106.ap-south-1.compute.internal",
            "private_ip": "10.10.2.106",
            "public_ip": "3.110.103.81",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0059b3c1d96bf567a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018acb9ec54bc1605",
            "tags": {
              "Name": "webapp-1b"
            },
            "tags_all": {
              "Name": "webapp-1b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df8b437d85f34267"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webapp-1b-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-064dae9d6b26cb0b8",
            "arn": "arn:aws:ec2:ap-south-1:170689096462:instance/i-067b84160e895477e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067b84160e895477e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux-machine-on-aws-1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-085119705d3962e7e",
            "private_dns": "ip-10-10-2-85.ap-south-1.compute.internal",
            "private_ip": "10.10.2.85",
            "public_ip": "43.204.227.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0348c75e17ccfe91e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-018acb9ec54bc1605",
            "tags": {
              "Name": "webapp-1b-1"
            },
            "tags_all": {
              "Name": "webapp-1b-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df8b437d85f34267"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "webapp-IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:internet-gateway/igw-0b91584e52322a060",
            "id": "igw-0b91584e52322a060",
            "owner_id": "170689096462",
            "tags": {
              "Name": "webapp-IG"
            },
            "tags_all": {
              "Name": "webapp-IG"
            },
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_webapp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "arn_suffix": "targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "target-group-webapp",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-1-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c-20220715113213802800000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "target_id": "i-0e327196a48669d28"
          },
          "dependencies": [
            "aws_instance.webapp-1a",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-2-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c-20220715113213925400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "target_id": "i-0c6c5d8402cc3d1d7"
          },
          "dependencies": [
            "aws_instance.webapp-1b",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_webapp-4-attachement",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c-20220715113213996100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:170689096462:targetgroup/target-group-webapp/4dbe99bb47ce245c",
            "target_id": "i-067b84160e895477e"
          },
          "dependencies": [
            "aws_instance.webapp-1b-1",
            "aws_lb_target_group.target_group_webapp",
            "aws_security_group.allow_port80",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:route-table/rtb-02a021cbea36d7e7c",
            "id": "rtb-02a021cbea36d7e7c",
            "owner_id": "170689096462",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b91584e52322a060",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public_RT"
            },
            "tags_all": {
              "Name": "Public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0adf2d071a8043f51",
            "route_table_id": "rtb-02a021cbea36d7e7c",
            "subnet_id": "subnet-08f51aa1e1c381dcd"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_route_table.Public_RT",
            "aws_subnet.subnet-1a",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-asso-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03343d77a525511bd",
            "route_table_id": "rtb-02a021cbea36d7e7c",
            "subnet_id": "subnet-018acb9ec54bc1605"
          },
          "dependencies": [
            "aws_internet_gateway.webapp-IG",
            "aws_route_table.Public_RT",
            "aws_subnet.subnet-1b",
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:security-group/sg-0df8b437d85f34267",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0df8b437d85f34267",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port_80",
            "name_prefix": "",
            "owner_id": "170689096462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port80_LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:security-group/sg-0920f702f62d3e7b3",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-0920f702f62d3e7b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound web traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_port_80_LB",
            "name_prefix": "",
            "owner_id": "170689096462",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:subnet/subnet-08f51aa1e1c381dcd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f51aa1e1c381dcd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170689096462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1a-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1a-webapp"
            },
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:subnet/subnet-018acb9ec54bc1605",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-018acb9ec54bc1605",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "170689096462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1b-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1b-webapp"
            },
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:subnet/subnet-020b24fc87b652d75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020b24fc87b652d75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "170689096462",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Subnet-1c-webapp"
            },
            "tags_all": {
              "Name": "Subnet-1c-webapp"
            },
            "vpc_id": "vpc-03cfd5dc56f99c8d3"
          },
          "dependencies": [
            "aws_vpc.Webapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Webapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:170689096462:vpc/vpc-03cfd5dc56f99c8d3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f0100140a30adbd2",
            "default_route_table_id": "rtb-07e1186a9cc7ea7c9",
            "default_security_group_id": "sg-091c2d258f2e21cc5",
            "dhcp_options_id": "dopt-0aa1d38199dc91781",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03cfd5dc56f99c8d3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e1186a9cc7ea7c9",
            "owner_id": "170689096462"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}